--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Demo Git</title>
 </head>
 <body>
-    <h1>Título</h1>
+    <h1>Título #1</h1>
+    <h2>Títulito #2</h2>
 </body>
 </html>
