incorporación de un formulario

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Título #1</h1>
     <h2>Títulito #2</h2>
+    
+    <form action="/my-handling-form-page" method="post"></form>
 </body>
 </html>
